--- a/src/main/resources/templates/email/confirmacaoPedido.html
+++ b/src/main/resources/templates/email/confirmacaoPedido.html
@@ -1,49 +1,168 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+
+<!doctype html>
+<html lang="en">
 <head>
-<title th:remove="all">Order Confirmation</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="../../../../favicon.ico">
+
+<title>Pricing example for Bootstrap</title>
+
+<!-- Bootstrap core CSS -->
+
+<!-- Custom styles for this template -->
+<link href="pricing.css" rel="stylesheet">
 </head>
+
 <body>
-	<div>
-		<h1>
-			Pedido número: <span th:text="${pedido.id}"> </span>
-		</h1>
-		<p>
-			Instante: <span
-				th:text="${#dates.format(pedido.instante, 'dd/MM/yyyy hh:mm')}"></span>
-		</p>
-		<p>
-			Cliente: <span th:text="${pedido.cliente.nome}"></span>
-		</p>
-		<p>
-			Situação do pagamento: <span
-				th:text="${pedido.pagamento.estadoPagamento.descricao}"></span>
-		</p>
-		<h3>Detalhes do pedido:</h3>
-		<table border="1">
-			<tr>
-				<th>Produto</th>
-				<th>Quantidade</th>
-				<th>Preço unitário</th>
-				<th>Subtotal</th>
-			</tr>
-			<tr th:each="item : ${pedido.itens}">
-				<td th:text="${item.produto.nome}">nome</td>
-				<td th:text="${item.quantidade}">quantidade</td>
-				<td
-					th:text="${#numbers.formatDecimal(item.preco, 0, 'POINT', 2,
-'COMMA')}">preco</td>
-				<td
-					th:text="${#numbers.formatDecimal(item.subTotal, 0, 'POINT', 2,
-'COMMA')}">subTotal</td>
-			</tr>
-		</table>
-		<p>
-			Valor total: <span
-				th:text="${#numbers.formatDecimal(pedido.valorTotal, 0,
-'POINT', 2, 'COMMA')}"></span>
-		</p>
+
+	<div
+		class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+		<h5 class="my-0 mr-md-auto font-weight-normal">Company name</h5>
+		<nav class="my-2 my-md-0 mr-md-3">
+			<a class="p-2 text-dark" href="#">Features</a> <a
+				class="p-2 text-dark" href="#">Enterprise</a> <a
+				class="p-2 text-dark" href="#">Support</a> <a class="p-2 text-dark"
+				href="#">Pricing</a>
+		</nav>
+		<a class="btn btn-outline-primary" href="#">Sign up</a>
 	</div>
+
+	<div
+		class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+		<h1 class="display-4">Pricing</h1>
+		<p class="lead">Quickly build an effective pricing table for your
+			potential customers with this Bootstrap example. It's built with
+			default Bootstrap components and utilities with little customization.</p>
+	</div>
+
+	<div class="container">
+		<div class="card-deck mb-3 text-center">
+			<div class="card mb-4 box-shadow">
+				<div class="card-header">
+					<h4 class="my-0 font-weight-normal">Free</h4>
+				</div>
+				<div class="card-body">
+					<h1 class="card-title pricing-card-title">
+						$0 <small class="text-muted">/ mo</small>
+					</h1>
+					<ul class="list-unstyled mt-3 mb-4">
+						<li>10 users included</li>
+						<li>2 GB of storage</li>
+						<li>Email support</li>
+						<li>Help center access</li>
+					</ul>
+					<button type="button"
+						class="btn btn-lg btn-block btn-outline-primary">Sign up
+						for free</button>
+				</div>
+			</div>
+			<div class="card mb-4 box-shadow">
+				<div class="card-header">
+					<h4 class="my-0 font-weight-normal">Pro</h4>
+				</div>
+				<div class="card-body">
+					<h1 class="card-title pricing-card-title">
+						$15 <small class="text-muted">/ mo</small>
+					</h1>
+					<ul class="list-unstyled mt-3 mb-4">
+						<li>20 users included</li>
+						<li>10 GB of storage</li>
+						<li>Priority email support</li>
+						<li>Help center access</li>
+					</ul>
+					<button type="button" class="btn btn-lg btn-block btn-primary">Get
+						started</button>
+				</div>
+			</div>
+			<div class="card mb-4 box-shadow">
+				<div class="card-header">
+					<h4 class="my-0 font-weight-normal">Enterprise</h4>
+				</div>
+				<div class="card-body">
+					<h1 class="card-title pricing-card-title">
+						$29 <small class="text-muted">/ mo</small>
+					</h1>
+					<ul class="list-unstyled mt-3 mb-4">
+						<li>30 users included</li>
+						<li>15 GB of storage</li>
+						<li>Phone and email support</li>
+						<li>Help center access</li>
+					</ul>
+					<button type="button" class="btn btn-lg btn-block btn-primary">Contact
+						us</button>
+				</div>
+			</div>
+		</div>
+
+		<footer class="pt-4 my-md-5 pt-md-5 border-top">
+			<div class="row">
+				<div class="col-12 col-md">
+					<img class="mb-2"
+						src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg"
+						alt="" width="24" height="24"> <small
+						class="d-block mb-3 text-muted">&copy; 2017-2018</small>
+				</div>
+				<div class="col-6 col-md">
+					<h5>Features</h5>
+					<ul class="list-unstyled text-small">
+						<li><a class="text-muted" href="#">Cool stuff</a></li>
+						<li><a class="text-muted" href="#">Random feature</a></li>
+						<li><a class="text-muted" href="#">Team feature</a></li>
+						<li><a class="text-muted" href="#">Stuff for developers</a></li>
+						<li><a class="text-muted" href="#">Another one</a></li>
+						<li><a class="text-muted" href="#">Last time</a></li>
+					</ul>
+				</div>
+				<div class="col-6 col-md">
+					<h5>Resources</h5>
+					<ul class="list-unstyled text-small">
+						<li><a class="text-muted" href="#">Resource</a></li>
+						<li><a class="text-muted" href="#">Resource name</a></li>
+						<li><a class="text-muted" href="#">Another resource</a></li>
+						<li><a class="text-muted" href="#">Final resource</a></li>
+					</ul>
+				</div>
+				<div class="col-6 col-md">
+					<h5>About</h5>
+					<ul class="list-unstyled text-small">
+						<li><a class="text-muted" href="#">Team</a></li>
+						<li><a class="text-muted" href="#">Locations</a></li>
+						<li><a class="text-muted" href="#">Privacy</a></li>
+						<li><a class="text-muted" href="#">Terms</a></li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+	</div>
+
+
+	<!-- Bootstrap core JavaScript
+    ================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+		crossorigin="anonymous"></script>
+	<script>
+      Holder.addTheme('thumb', {
+        bg: '#55595c',
+        fg: '#eceeef',
+        text: 'Thumbnail'
+      });
+    </script>
 </body>
 </html>
